# BudBuddy

./: .env.example  .gitignore  Cargo.toml  LICENSE  PRIVACY_POLICY.md  README.md  TERMS_OF_SERVICE.md  devenv.nix
.cargo/: Config.toml
.sqlx/: query-0a55f6e709d4179b50bb34e5989cbb524205fcfe4da5e6e784c4df35a809e421.json  query-11ddcc9bafa98d3ad87ff0d79b9e9be7945ebf34db3283a5e83aa7433880a30b.json  query-40a83578cc6c9cf6520a87c4c522ba84e744c0877e46031abb6c23330d4820e3.json  query-7323f860bb9546022fbfa9ec02bb219661e514c3868456f74f5d1f27d045f565.json  query-88583eb7c5685a30cbe1c7b69153e54ec8029daadb90d88076c6f171ac6c297c.json  query-912c399472cd1f7d8d0ce445fd4997bc0109b9a15491b219702bac7b43d67b63.json  query-bd9527685be3b9f57d4fa270d19476f28c44b3b844bbf4bf59fa0087a3bd8852.json  query-c0d490ecf2db923ccb5525ff691b5b594940ea2f00d74359a2522853c0c3bff4.json  query-cba7e1d748786263f9f4d029daeabd77139a411be7e9e2bc3921e1be006b45ac.json  query-f136303d092461300d78bdbd9a4e7f9d062fcc840a785b20a35a0b7547a54a15.json  query-f49e1f76684bce5eec7c74adf9e0c808950668d6ee63509fae5df685159a3a54.json  query-f56342b290c3bcff0473f3a0d67fd6cb676e48811ccde516d4ddc039be24802f.json
migrations/: 20251005195527_strains.down.sql  20251005195527_strains.up.sql  20251008013333_discord.down.sql  20251008013333_discord.up.sql
src/: main.rs  types.rs
src/commands/: mod.rs
src/commands/strains/: fetch_strain.rs  mod.rs  puff.rs  search_strains.rs
src/commands/utility/: about.rs  help.rs  mod.rs  ping.rs  register.rs
