[package]
name = "budbuddy"
version = "0.4.2"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
# dotenvy = "0.15.7"
poise = "0.6.1"
rand = "0.9.2"
serde = "1.0.228"
sqlx = { version = "0.8.6", features = [
    "bigdecimal",
    "postgres",
    "runtime-tokio",
    "time",
    "tls-rustls",
    "uuid",
] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
